--- a/documentation/seminarvorlage.cls
+++ b/documentation/seminarvorlage.cls
@@ -71,6 +71,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{float}
 %
 % ACM_PROC_ARTICLE-SP  DOCUMENT STYLE
 % G.K.M. Tobin August-October 1999
